[package]
name = "rainy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serde = "1"
serde_json = "1"
serde_derive = "1"
chrono = "0.4"
